fix page header overlap in-page anchors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1050,6 +1050,14 @@ Subscription form
   color: #cc3535;
 }
 
+/* fix page header overlap in-page anchors */
+:target::before {
+  content: "";
+  display: block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
+
 /* related posts */
 
 /*
